--- a/aws/cloudformation/resources/otcs-otds.yml
+++ b/aws/cloudformation/resources/otcs-otds.yml
@@ -28,10 +28,9 @@ Parameters:
     Type: String
     Description: "Name of the keypair"
     Default: ava-debug
-  InstanceType:
+  OtcsOtdsInstanceType:
     Type: String
     Description: "Name of the keypair"
-    Default: m5d.xlarge
 
 Resources:
   OTCSOTDSSecurityGrp:
@@ -41,19 +40,13 @@ Resources:
       GroupDescription: Enable SSH access via port 22
       SecurityGroupIngress:
       - CidrIp: 10.0.0.0/8
-        # FromPort: 22
         IpProtocol: -1
-        # ToPort: 22
-      # - CidrIp: 0.0.0.0/0
-      #   FromPort: 80
-      #   IpProtocol: tcp
-      #   ToPort: 80
 
   OTCSOTDS:
     Type: "AWS::EC2::Instance"
     Properties:
       ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]
-      InstanceType: !Ref InstanceType
+      InstanceType: !Ref OtcsOtdsInstanceType
       KeyName: !Ref Keyname
       SecurityGroupIds: 
         - !Ref OTCSOTDSSecurityGrp
@@ -62,6 +55,9 @@ Resources:
         -
           Key: Name
           Value: !Join [ '-', [OTCSOTDS, !Ref EnvType] ]
+        -
+          Key: App
+          Value: AV2.0
 
   MountPoint1: 
     Type: "AWS::EC2::VolumeAttachment"
