Adding changes for the TEST env

--- a/aws/cloudformation/Makefile
+++ b/aws/cloudformation/Makefile
@@ -1,11 +1,12 @@
-ENV=uat
+ENV=test
 STACK_NAME=pm-av-openText-$(ENV)
 PROFILE=default
 GLOBAL_STACK_NAME=pm-av-openText-$(ENV)
 REGION=us-east-1
 
 upload-env:
-	# @aws s3api create-bucket --bucket pm-av-opentext-templates-us-east-1-$(ENV) --region us-east-1
+	#@aws s3api create-bucket --bucket pm-av-opentext-templates-us-east-1-$(ENV) --region us-east-1 
+	#@aws s3api put-bucket-tagging --bucket pm-av-opentext-templates-us-east-1-$(ENV) --tagging 'TagSet=[{Key=App,Value=AV-2.0},{Key=BusinessTower,Value=PM},{Key=Department,Value=DT},{Key=BillingApprover,Value=Steve.Yi@cbre.com},{Key=FMC,Value=411407}]'
 	@aws s3 cp _main.yml s3://pm-av-opentext-templates-us-east-1-$(ENV)/cloudformation/_main.yml
 	@aws s3 cp resources/otcs-adm.yml s3://pm-av-opentext-templates-us-east-1-$(ENV)/cloudformation/$(ENV)/otcs-adm.yml
 	@aws s3 cp resources/otcs-ags.yml s3://pm-av-opentext-templates-us-east-1-$(ENV)/cloudformation/$(ENV)/otcs-ags.yml
@@ -23,7 +24,8 @@ create-env:
 		--parameters file://parameters.$(ENV).json \
 		--capabilities CAPABILITY_IAM \
 		--profile $(PROFILE) \
-		--tags file://tags.$(ENV).json
+		--tags file://tags.$(ENV).json \
+		--disable-rollback
 
 update-env:
 	@aws cloudformation update-stack \
